common_tools2/charts/prometheus-adapter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    
  name: kuard
spec:
  rules:
  - host: kuard.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - kuard.fuchicorp.com
    secretName: kuard-tls
